# VectorGraphRAG

./: .env-template  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
notebooks/: RAG_demo.ipynb  VDB_KG_pipeline.ipynb  VDB_KG_query.ipynb  partition_data.ipynb
src/: main.py
src/app/: app.py  components.py
src/pipelines/: document_ingestion.py  graph_ingestion.py  ner_inference.py  vector_ingestion.py
src/tests/: test_neo4j_db.py  test_qdrant_db.py  test_reasoning.py
